--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+# General
+.DS_Store
+.env
+*.log
+
+# Backend
 backend/data/*.json
 backend/node_modules
 backend/.vagrant
-.DS_Store
-*.log
 backend/config.json
+
+# App
+app/node_modules
+app/coverage
+app/build
