--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -7,6 +7,7 @@
       "comma-dangle": 0,
       "react/jsx-filename-extension": 0,
       "react/prefer-stateless-function": 0,
-      "react/forbid-prop-types": 0
+      "react/forbid-prop-types": 0,
+      "jsx-a11y/href-no-hash": 0
     }
 }
